--- a/hack/config.yaml
+++ b/hack/config.yaml
@@ -1,4 +1,19 @@
-
 # CLI tool, only in development environment.
 # https://goframe.org/pages/viewpage.action?pageId=3673173
+# 工具相关配置
 gfcli:
+  # 工具编译配置
+  build:
+    name: "goframe-shop-v2"
+    arch: "amd64"
+    system: "linux,darwin,windows"
+    mod: ""
+    cgo: 0
+
+  # dao生成
+  gen:
+    dao:
+      - link: "mysql:root:2BaDgEMGQj@tcp(127.0.0.1:3306)/shop"
+        removePrefix: "gf_"
+        descriptionTag: true
+        noModelComment: true
