--- a/hack/config.yaml
+++ b/hack/config.yaml
@@ -4,7 +4,7 @@
 gfcli:
   # 工具编译配置
   build:
-    name: "goframe-shop-v2"
+    name: "shop"
     arch: "amd64"
     system: "linux,darwin,windows"
     mod: ""
@@ -12,7 +12,7 @@ gfcli:
 
   # dao生成
   gen:
-    dao:
+    dao:  #todo 换成你自己的密码
       - link: "mysql:root:2BaDgEMGQj@tcp(127.0.0.1:3306)/shop"
         removePrefix: "gf_"
         descriptionTag: true
