--- a/manifest/config/config.yaml
+++ b/manifest/config/config.yaml
@@ -3,10 +3,6 @@ server:
   openapiPath: "/api.json"
   swaggerPath: "/swagger"
 
-logger:
-  level: "all"
-  stdout: true
-
 # 数据库连接配置
 database:
   logger:
@@ -15,7 +11,6 @@ database:
     stdout: true
     ctxKeys: [ "RequestId" ]
 
-  #记得修改成自己的数据库密码
-  default:
+  default:  # todo  修改成自己的密码
     link: "mysql:root:2BaDgEMGQj@tcp(127.0.0.1:3306)/shop"
     debug: true
