--- a/manifest/config/config.yaml
+++ b/manifest/config/config.yaml
@@ -12,7 +12,7 @@ database:
     ctxKeys: [ "RequestId" ]
 
   default: # todo  修改成自己的密码
-    link: "mysql:root:2BaDgEMGQj@tcp(127.0.0.1:3306)/shop"
+    link: "mysql:root:2BaDgEMGQj@tcp(127.0.0.1:3306)/shop?loc=Local"
     debug: true
 
 # Redis 配置示例
