--- a/manifest/config/config.yaml
+++ b/manifest/config/config.yaml
@@ -12,7 +12,7 @@ database:
     ctxKeys: [ "RequestId" ]
 
   default: # todo  修改成自己的密码
-    link: "mysql:root:2BaDgEMGQj@tcp(127.0.0.1:3306)/shop"
+    link: "mysql:root:root@tcp(127.0.0.1:3306)/shop"
     debug: true
 
 
@@ -21,5 +21,5 @@ redis:
   default:
     address: 127.0.0.1:6379
     db: 1
-    pass: f2QteFQvC6rxjjJ6
+    pass:
     idleTimeout: 600
