--- a/hack/config.yaml
+++ b/hack/config.yaml
@@ -12,8 +12,11 @@ gfcli:
 
   # dao生成
   gen:
-    dao:  #todo 换成你自己的密码
-      - link: "mysql:root:2BaDgEMGQj@tcp(127.0.0.1:3306)/shop"
-        removePrefix: "gf_"
+    dao:
+      - link: "mysql:root:123456@tcp(127.0.0.1:3306)/gf_db_demo?loc=Local"
+        jsonCase: "CamelLower"
         descriptionTag: true
-        noModelComment: true
+        noModelComment: false
+        overwriteDao: true
+        stdTime: false
+        gJsonSupport: true
