--- a/hack/config.yaml
+++ b/hack/config.yaml
@@ -12,11 +12,7 @@ gfcli:
 
   # dao生成
   gen:
-    dao:
-      - link: "mysql:root:123456@tcp(127.0.0.1:3306)/gf_db_demo?loc=Local"
-        jsonCase: "CamelLower"
+    dao: #todo 换成你自己的密码
+      - link: "mysql:root:2BaDgEMGQj@tcp(127.0.0.1:3306)/shop"
         descriptionTag: true
-        noModelComment: false
-        overwriteDao: true
-        stdTime: false
-        gJsonSupport: true
+        noModelComment: true
