--- a/hack/config.yaml
+++ b/hack/config.yaml
@@ -13,6 +13,6 @@ gfcli:
   # dao生成
   gen:
     dao: #todo 换成你自己的密码
-      - link: "mysql:root:2BaDgEMGQj@tcp(127.0.0.1:3306)/shop"
+      - link: "mysql:root:666666@tcp(127.0.0.1:3306)/shop"
         descriptionTag: true
         noModelComment: true
