--- a/manifest/config/example_config.yaml
+++ b/manifest/config/example_config.yaml
@@ -12,7 +12,7 @@ database:
     ctxKeys: [ "RequestId" ]
 
   default: # todo  修改成自己的密码
-    link: "mysql:root:2BaDgEMGQj@tcp(127.0.0.1:3306)/shop"
+    link: "mysql:root:666666@tcp(127.0.0.1:3306)/shop"
     debug: true
 
 
@@ -21,7 +21,7 @@ redis:
   default:
     address: 127.0.0.1:6379
     db: 1
-    pass: f2QteFQvC6rxjjJ6
+    pass:
     idleTimeout: 600
 #todo 改成你自己的秘钥和域名地址
 qiniu:
